deployment_example/nginx_http/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-ingress
  namespace: my-k3s
spec:
  rules:
    # - host: "nginx1.
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx1
              port:
                number: 80
