deployment_example/nginx_http/nginx-test.yaml
---
apiVersion: apps/v1
kind:  Deployment
metadata:
  name: nginx1
  namespace: my-k3s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - name: nginx1
          image: nginx:1.31.1
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1
  namespace: my-k3s
spec:
  type: ClusterIP
  selector:
    app: nginx1
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1
  namespace: my-k3s
  labels:
    app: nginx1
spec:
  ingressClassName: traefik
  rules:
    - host: nginx.load_balancer_ip_address.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx1
                port:
                  number: 80
